# jouzu-cli

./: '  Cargo.toml  README.md  word_bank.json
src/: app.rs  conjugation.rs  game.rs  lexicon.rs  main.rs  round.rs  verb.rs
src/utils/: mod.rs
