[package]
name = "jouzu-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
rand = "0.8.0"
ratatui = "0.30.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tui-input = "0.15.0"
unicode-segmentation = "1.12.0"
wana_kana = "4.0.0"
